<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="30dp">

    <TextView
        android:id="@+id/resultTextView"
        android:text="@string/resultTextView"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" />

    <ImageView
        android:id="@+id/resultImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        tools:src="@drawable/screenshot__21_"
        android:contentDescription="Result Image" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/congratsTextView"
        android:text="@string/congratulationsTextView"
        android:textSize="35sp"
        android:textStyle="italic|bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/usernameTextView"
        android:text="@string/usernameTextView"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:textStyle="italic|bold"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scoreTextView"
        android:text="@string/scoreTextView"
        android:textSize="25sp"
        android:textStyle="normal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/exitButton"
        android:text="@string/exitButton"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="10dp"
        android:gravity="center_horizontal"
        android:background="@color/lavender"
        android:textSize="20sp"
        android:shadowRadius="20"/>

</LinearLayout>






