<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.QuestionsActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/question_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/question"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/flag_imageView"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_marginTop="25dp"
            android:strokeColor="@android:color/black"
            android:contentDescription="@string/imageContentDescription"
            tools:src="@drawable/screenshot__10_"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_weight="8"
                android:foregroundGravity="center_horizontal"
                android:indeterminate="false"
                android:max="10"
                android:minHeight="30dp"
                android:progressBackgroundTint="@color/midnight_slate"
                android:progressTint="@color/teal_200"
                tools:progress="2" />

            <TextView
                android:id="@+id/progress_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/progressText"
                android:textColor="@color/teal_200"
                android:textSize="20sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/option1_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:text="@string/option1"
            android:textColor="@color/midnight_slate"
            android:layout_marginHorizontal="20dp"
            android:textSize="25sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/option2_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:text="@string/option2"
            android:textColor="@color/midnight_slate"
            android:layout_marginHorizontal="20dp"
            android:textSize="25sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/option3_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:text="@string/option3"
            android:textColor="@color/midnight_slate"
            android:layout_marginHorizontal="20dp"
            android:textSize="25sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/option4_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/default_option_border_bg"
            android:gravity="center"
            android:text="@string/option4"
            android:textColor="@color/midnight_slate"
            android:layout_marginHorizontal="20dp"
            android:textSize="25sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:text="@string/submitButton"
            android:backgroundTint="@color/teal_200"
            android:textSize="20sp"
            android:clickable="true"
            android:focusable="true" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>






