<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity">

    <!-- App Title -->
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="70sp"
        android:textStyle="italic|bold" />

    <!-- Centered CardView -->
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp"
        app:cardMaxElevation="40dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcomeMsg"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/enterName"
                android:textSize="25sp"
                android:textStyle="italic" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:maxLines="2" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/startButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startQuiz"
                android:textSize="20sp"
                android:backgroundTint="@color/teal_200"
                android:layout_marginTop="20dp">
            </Button>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.appcompat.widget.LinearLayoutCompat>








